--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,3 +36,25 @@
     flex-direction: column;
   }
 }
+
+.startPlayingButton {
+  display: flex;
+  background: #02e976;
+  color: black;
+  padding: 8px;
+  border-radius: 4px;
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: capitalize;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  margin: auto;
+}
+
+.startPlayingButton:hover {
+  opacity: 0.8;
+}
